fix(3156108853): align wallet button to Figma (#296)

--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -12,7 +12,7 @@
   line-height: 24px;
   border: 1px solid;
   box-sizing: border-box;
-  border-radius: 7px;
+  border-radius: 8px;
   margin: 10px 0;
   padding: 20px 15px;
   cursor: pointer;
@@ -22,7 +22,7 @@
 
   .icon {
     &.right {
-      margin-left: 10px;
+      margin-left: 8px;
     }
   }
 
@@ -38,7 +38,7 @@
   &.hasText {
     img,
     svg {
-      margin-right: 10px;
+      margin-right: 8px;
     }
   }
 }
